# SafeInt

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SafeInt.hpp  helpfile.md  safe_math.h  safe_math_impl.h
Archive/discussions/: 216022.json  40572.json  41098.json  578321.json  59376.json  60193.json  651967.json  82177.json  discussions.json
Archive/issues/: issues.json
Archive/issues/13029/: 13029.json
Archive/issues/14278/: 14278.json
Archive/issues/15237/: 15237.json
Archive/issues/16816/: 16816.json
Archive/issues/17327/: 17327.json
Archive/issues/17629/: 17629.json
Archive/issues/17676/: 17676.json
Archive/issues/6534/: 6534.json
Archive/issues/6609/: 6609.json
Archive/issues/6642/: 6642.json
Archive/issues/6645/: 6645.json
Archive/issues/6710/: 6710.json
Archive/issues/6711/: 6711.json
Archive/issues/7910/: 7910.json
Archive/issues/8791/: 2614  8791.json
Archive/license/: license.json
Archive/releases/: releaseList.json
Archive/releases/0/: SafeInt_3017p.hpp
Archive/releases/1/: SafeInt_3016p.hpp
Archive/releases/2/: AddVerify.cpp  DivVerify.cpp  IncDecVerify.cpp  ModVerify.cpp  MultVerify.cpp  SubVerify.cpp  TestMain.cpp  TestMain.h
Archive/releases/3/: SafeInt_3015p.hpp  TestCompile.cpp
Archive/releases/4/: MulTest.cpp
Archive/releases/5/: MulTest.cpp  SafeInt_3013p.cpp  SafeInt_gcc.hpp  TestCompile.cpp  TestMain.cpp
Archive/releases/7/: SafeInt_3011p.hpp
Archive/wiki/Render/: documents.json
Archive/wiki/Render/1909658/: 1909658.html
Test/: AddTestCase.cpp  AddVerify.cpp  CMakeLists.txt  CastVerify.cpp  CleanCompile.cpp  CompileTest.cpp  ConstExpr.cpp  ConstExpr_Intrinsics.cpp  DivTestCase.cpp  DivVerify.cpp  IncDecVerify.cpp  ModVerify.cpp  MultTestCase.cpp  MultVerify.cpp  MultVerify.h  SubTestCase.cpp  SubVerify.cpp  TestCase.h  TestMain.cpp  TestMain.h
Test/ClangTest/: .gitignore  CMakeLists.txt  makefile  readme.txt
Test/GccTest/: .gitignore  CMakeLists.txt  makefile
Test/MsvcTest/: CMakeLists.txt  build_test.cmd
Test/SafeIntTest/: .gitignore  SafeIntTest.sln  SafeIntTest.vcxproj  SafeIntTest.vcxproj.filters
Test/SafeIntTest/CompileTest/: CompileTest.vcxproj  CompileTest.vcxproj.filters
Test/SafeIntTestVS17/: .gitignore  SafeIntTestVS17.sln
Test/SafeIntTestVS17/CompileTest/: CompileTest.vcxproj  CompileTest.vcxproj.filters
Test/SafeIntTestVS17/SafeIntTestVS17/: SafeIntTestVS17.vcxproj  SafeIntTestVS17.vcxproj.filters
Test/SafeIntTestVS17/Scratch/: Scratch.cpp  Scratch.vcxproj  Scratch.vcxproj.filters
Test/c_safe_math/: c_safe_math.vcxproj  compile_test.c  safe_math_compile.c  safe_math_test.c  safe_math_test.h  safe_math_test_add.cpp  safe_math_test_div.cpp  safe_math_test_mult.cpp  safe_math_test_sub.cpp
